--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,15 @@
   color: white;
   padding: 10px 0;
 }
-.mainConatiner button{
+.container{
+  width: 250px;
+  border: 1px solid gray;
+  box-shadow: 0 4px 8px 0 rgba(234, 231, 231, 0.2), 0 6px 20px 0 rgba(247, 219, 219, 0.19);
+  margin: 0 auto;
+  padding: 10px 0;
+  border-radius: 7px;
+}
+.container button{
   padding: 10px 12px;
   border: none;
   background-color: aliceblue;
@@ -17,6 +25,6 @@
   border-radius: 5px;
   font-size: 16px;
 }
-.mainConatiner span{
+.container span{
   color: green;
 }
