fix: negative numbers issue fiexed

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .mainConatiner{
   max-width: 1300px;
   width: 100%;
-  height: auto;
+  height: 100%;
   margin: 0 auto;
   background-color: #0e0404;
   text-align: center;
